# NutriChoice

./: .gitignore  Makefile  README.md  go.mod  set_env.sh
database/postgres/: docker-compose.yaml
database/sql/ddl/: table_product.sql
myapp/: Cargo.toml
myapp/src/: main.rs
myapp/src/entities/: product.rs
myapp/src/routers/: mod.rs  product_routes.rs
myapp/src/services/: product_services.rs
