[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
lazy_static = "1.5.0"
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"]}